--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 uk.gov.companieshouse.certified.copies.api.health=/healthcheck
 uk.gov.companieshouse.certified.copies.api.home=/orderable/certified-copies
+
+spring.data.mongodb.uri: ${MONGODB_URL}
