--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<junit-jupiter-engine-version>5.2.0</junit-jupiter-engine-version>
 		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
-		<start-class>uk.gov.companieshouse.certifiedcopies.api.CertifiedCopiesApiApplication</start-class>
+		<start-class>uk.gov.companieshouse.certifiedcopies.orders.api.CertifiedCopiesApiApplication</start-class>
 	</properties>
 
 	<dependencies>
