--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<junit-jupiter-engine-version>5.2.0</junit-jupiter-engine-version>
 		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
+		<api-security-java.version>0.2.10</api-security-java.version>
 		<start-class>uk.gov.companieshouse.certifiedcopies.orders.api.CertifiedCopiesApiApplication</start-class>
 	</properties>
 
@@ -53,6 +54,12 @@
 			<groupId>uk.gov.companieshouse</groupId>
 			<artifactId>structured-logging</artifactId>
 			<version>${structured-logging.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>uk.gov.companieshouse</groupId>
+			<artifactId>api-security-java</artifactId>
+			<version>${api-security-java.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
