--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-uk.gov.companieshouse.certified.copies.api.health=/healthcheck
-uk.gov.companieshouse.certified.copies.api.home=/orderable/certified-copies
+uk.gov.companieshouse.certifiedcopies.orders.api.health=/healthcheck
+uk.gov.companieshouse.certifiedcopies.orders.api.home=/orderable/certified-copies
 
 spring.data.mongodb.uri: ${MONGODB_URL}
 spring.data.mongodb.field-naming-strategy: uk.gov.companieshouse.certifiedcopies.orders.api.model.NoIsSnakeCaseFieldNamingStrategy
