--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<structured-logging.version>1.9.0</structured-logging.version>
 		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
 		<gson.version>2.8.0</gson.version>
+		<guava.version>28.1-jre</guava.version>
 		<commons.lang.version>2.6</commons.lang.version>
 		<jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
 		<junit-jupiter-engine-version>5.2.0</junit-jupiter-engine-version>
@@ -45,6 +46,11 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${gson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
