Add path pattern property to tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,5 @@
 uk.gov.companieshouse.certifiedcopies.orders.api.health=/healthcheck
 uk.gov.companieshouse.certifiedcopies.orders.api.home=/orderable/certified-copies
+uk.gov.companieshouse.certifiedcopies.orders.api.path.pattern=${uk.gov.companieshouse.certifiedcopies.orders.api.home}/**
 
 spring.data.mongodb.field-naming-strategy: uk.gov.companieshouse.certifiedcopies.orders.api.model.NoIsSnakeCaseFieldNamingStrategy
