--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<api-security-java.version>0.2.10</api-security-java.version>
 		<api-helper-java.version>1.4.2</api-helper-java.version>
-		<system-rules-version>1.19.0</system-rules-version>
+		<junit-pioneer-version>0.6.0</junit-pioneer-version>
 		<start-class>uk.gov.companieshouse.certifiedcopies.orders.api.CertifiedCopiesApiApplication</start-class>
 	</properties>
 
@@ -111,9 +111,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.stefanbirkner</groupId>
-			<artifactId>system-rules</artifactId>
-			<version>${system-rules-version}</version>
+			<groupId>org.junit-pioneer</groupId>
+			<artifactId>junit-pioneer</artifactId>
+			<version>${junit-pioneer-version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
