--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<api-security-java.version>0.2.10</api-security-java.version>
 		<api-helper-java.version>1.4.2</api-helper-java.version>
+		<!-- TODO GCI-1209 Update api-sdk-java dependency to 4.2.36+ -->
+		<api-sdk-java.version>unversioned</api-sdk-java.version>
 		<junit-pioneer-version>0.6.0</junit-pioneer-version>
 		<spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
 		<powermock.version>2.0.6</powermock.version>
@@ -76,6 +78,12 @@
 			<groupId>uk.gov.companieshouse</groupId>
 			<artifactId>api-helper-java</artifactId>
 			<version>${api-helper-java.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>uk.gov.companieshouse</groupId>
+			<artifactId>api-sdk-java</artifactId>
+			<version>${api-sdk-java.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
