--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<commons.lang.version>2.6</commons.lang.version>
 		<jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
 		<junit-jupiter-engine-version>5.2.0</junit-jupiter-engine-version>
+		<junit-vintage-engine-version>5.3.2</junit-vintage-engine-version>
 		<mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
 		<hamcrest-all-version>1.3</hamcrest-all-version>
 		<api-security-java.version>0.2.10</api-security-java.version>
@@ -113,6 +114,12 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>${junit-jupiter-engine-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>${junit-vintage-engine-version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
