fixed unit test

--- a/src/test/resources/orders_descriptions_incorrect_certified_copy_descriptions_key.yaml
+++ b/src/test/resources/orders_descriptions_incorrect_certified_copy_descriptions_key.yaml
@@ -1,3 +1,3 @@
 ---
 certified-copy-description-incorrect:
-  'company-certified-copy' : 'certificate for company {company-number}'
+  'company-certified-copy' : 'certified copy for company {company-number}'
