--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <api-sdk-java.version>4.2.36</api-sdk-java.version>
         <api-sdk-manager-java-library.version>1.0.4</api-sdk-manager-java-library.version>
         <powermock.version>2.0.6</powermock.version>
-        <!-- system-rules: 1.17.2 is the latest version that works with JUnit 
+        <!-- system-rules: 1.17.2 is the latest version that works with JUnit
             5. See https://github.com/stefanbirkner/system-rules/issues/70 -->
         <system-rules-version>1.17.2</system-rules-version>
         <spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
@@ -245,6 +245,21 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>2.6.0</version>
+                <configuration>
+                    <extraDirectories>
+                        <paths>
+                            <path>
+                                <from>${project.basedir}/api-enumerations</from>
+                                <into>/api-enumerations</into>
+                            </path>
+                        </paths>
+                    </extraDirectories>
+                </configuration>
             </plugin>
         </plugins>
     </build>
