--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <junit-vintage-engine-version>5.3.2</junit-vintage-engine-version>
         <mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
         <hamcrest-all-version>1.3</hamcrest-all-version>
-        <api-security-java.version>0.2.16</api-security-java.version>
+        <api-security-java.version>0.3.0</api-security-java.version>
         <api-helper-java.version>1.4.2</api-helper-java.version>
         <api-sdk-java.version>4.2.36</api-sdk-java.version>
         <api-sdk-manager-java-library.version>1.0.4</api-sdk-manager-java-library.version>
@@ -58,7 +58,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-rest</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
