--- a/pom.xml
+++ b/pom.xml
@@ -249,7 +249,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>2.6.0</version>
+                <version>2.7.0</version>
                 <configuration>
                     <extraDirectories>
                         <paths>
@@ -259,6 +259,9 @@
                             </path>
                         </paths>
                     </extraDirectories>
+                    <container>
+                        <expandClasspathDependencies>true</expandClasspathDependencies>
+                    </container>
                 </configuration>
             </plugin>
         </plugins>
