--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,9 @@
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <spring-boot-maven-plugin.version>2.1.15.RELEASE</spring-boot-maven-plugin.version>
         <environment-reader-library.version>1.3.6</environment-reader-library.version>
+
+        <!-- Docker -->
+        <jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -249,7 +252,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>2.7.0</version>
+                <version>${jib-maven-plugin.version}</version>
                 <configuration>
                     <extraDirectories>
                         <paths>
