--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,6 @@
         <commons.lang.version>2.6</commons.lang.version>
         <snakeyaml.version>1.25</snakeyaml.version>
         <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
-        <junit-jupiter-engine-version>5.2.0</junit-jupiter-engine-version>
-        <junit-vintage-engine-version>5.3.2</junit-vintage-engine-version>
-        <mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
         <hamcrest-all-version>1.3</hamcrest-all-version>
         <api-security-java.version>0.3.4</api-security-java.version>
         <api-helper-java.version>1.4.2</api-helper-java.version>
@@ -36,11 +33,11 @@
         <system-rules-version>1.17.2</system-rules-version>
         <spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
         <start-class>uk.gov.companieshouse.certifiedcopies.orders.api.CertifiedCopiesApiApplication</start-class>
-        <spring-boot-dependencies.version>2.1.15.RELEASE</spring-boot-dependencies.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <spring-boot-maven-plugin.version>2.1.15.RELEASE</spring-boot-maven-plugin.version>
         <environment-reader-library.version>1.3.6</environment-reader-library.version>
+        <spring-boot-maven-plugin.version>2.5.5</spring-boot-maven-plugin.version>
+        <spring-boot-dependencies.version>2.5.5</spring-boot-dependencies.version>
 
         <!-- Docker -->
         <jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
@@ -93,6 +90,11 @@
             <version>${snakeyaml.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.tomlj</groupId>
+            <artifactId>tomlj</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>structured-logging</artifactId>
             <version>${structured-logging.version}</version>
@@ -140,24 +142,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter-engine-version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit-vintage-engine-version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito-junit-jupiter-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
