Add server error message include to application properties

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,5 @@ uk.gov.companieshouse.certifiedcopies.orders.api.health=/healthcheck
 uk.gov.companieshouse.certifiedcopies.orders.api.home=/orderable/certified-copies
 
 spring.data.mongodb.field-naming-strategy: uk.gov.companieshouse.certifiedcopies.orders.api.model.NoIsSnakeCaseFieldNamingStrategy
+
+server.error.include-message=always
