--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <commons.lang.version>2.6</commons.lang.version>
         <snakeyaml.version>1.26</snakeyaml.version>
         <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
+        <javax.json-api.version>1.1.4</javax.json-api.version>
+        <johnzon.version>1.2.7</johnzon.version>
+        <jackson.version>2.11.1</jackson.version>
         <hamcrest-all-version>1.3</hamcrest-all-version>
         <api-security-java.version>0.3.4</api-security-java.version>
         <api-helper-java.version>1.4.2</api-helper-java.version>
@@ -74,9 +77,24 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr353</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.johnzon</groupId>
+            <artifactId>johnzon-core</artifactId>
+            <version>${johnzon.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>${javax.json-api.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -87,6 +105,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.0.4</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
