Update unit tests to cater for digital option

--- a/src/main/resources/costs.properties
+++ b/src/main/resources/costs.properties
@@ -2,3 +2,5 @@ costs.standard_cost: 15
 costs.standard_new_incorporation_cost: 30
 costs.same_day_cost: 50
 costs.same_day_new_incorporation_cost: 100
+costs.digital_cost: 9
+costs.digital_new_incorporation_cost: 9
