--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
         <artifactId>companies-house-parent</artifactId>
-        <version>1.3.0</version>
+        <version>2.1.2</version>
     </parent>
     <artifactId>certified-copies.orders.api.ch.gov.uk</artifactId>
     <version>unversioned</version>
@@ -14,37 +14,38 @@
     <description>CH API handling CRUD operations on Certified Copies Service</description>
 
     <properties>
-        <java.version>1.8</java.version>
-        <structured-logging.version>1.9.12</structured-logging.version>
-        <org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
-        <gson.version>2.8.0</gson.version>
-        <guava.version>28.1-jre</guava.version>
-        <commons.lang.version>2.6</commons.lang.version>
-        <snakeyaml.version>1.26</snakeyaml.version>
-        <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
-        <javax.json-api.version>1.1.4</javax.json-api.version>
-        <johnzon.version>1.2.7</johnzon.version>
-        <jackson.version>2.11.1</jackson.version>
+        <java.version>21</java.version>
+        <structured-logging.version>2.0.3</structured-logging.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+        <gson.version>2.10.1</gson.version>
+        <guava.version>32.1.3-jre</guava.version>
+        <commons.lang3.version>3.13.0</commons.lang3.version>
+        <snakeyaml.version>2.2</snakeyaml.version>
+        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+        <jakarta.json-api.version>2.1.3</jakarta.json-api.version>
+        <johnzon.version>2.0.0</johnzon.version>
+        <jackson.version>2.15.3</jackson.version>
         <hamcrest-all-version>1.3</hamcrest-all-version>
-        <api-security-java.version>0.3.4</api-security-java.version>
-        <api-helper-java.version>1.4.2</api-helper-java.version>
-        <api-sdk-java.version>4.2.36</api-sdk-java.version>
-        <api-sdk-manager-java-library.version>1.0.4</api-sdk-manager-java-library.version>
-        <powermock.version>2.0.6</powermock.version>
+        <api-security-java.version>1.0.2</api-security-java.version>
+        <api-helper-java.version>2.0.6</api-helper-java.version>
+        <api-sdk-java.version>5.0.5</api-sdk-java.version>
+        <api-sdk-manager-java-library.version>2.0.2</api-sdk-manager-java-library.version>
+        <powermock.version>2.0.9</powermock.version>
+        <flapdoodle.embed.mongo.version>4.10.1</flapdoodle.embed.mongo.version>
         <!-- system-rules: 1.17.2 is the latest version that works with JUnit
             5. See https://github.com/stefanbirkner/system-rules/issues/70 -->
-        <system-rules-version>1.17.2</system-rules-version>
-        <spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
+        <system-rules-version>1.19.0</system-rules-version>
+        <spring-cloud-contract-wiremock-version>4.0.4</spring-cloud-contract-wiremock-version>
         <start-class>uk.gov.companieshouse.certifiedcopies.orders.api.CertifiedCopiesApiApplication</start-class>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <environment-reader-library.version>1.3.6</environment-reader-library.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
+        <environment-reader-library.version>2.0.2</environment-reader-library.version>
 
-        <spring-boot-maven-plugin.version>2.5.5</spring-boot-maven-plugin.version>
-        <spring-boot-dependencies.version>2.5.5</spring-boot-dependencies.version>
+        <spring-boot-maven-plugin.version>3.1.5</spring-boot-maven-plugin.version>
+        <spring-boot-dependencies.version>3.1.5</spring-boot-dependencies.version>
 
         <!-- Docker -->
-        <jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
+        <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -92,9 +93,9 @@
             <version>${org.mapstruct.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
-            <version>${javax.json-api.version}</version>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
+            <version>${jakarta.json-api.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -106,10 +107,11 @@
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>${commons.lang.version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>org.yaml</groupId>
@@ -175,6 +177,7 @@
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
             <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>${flapdoodle.embed.mongo.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
