--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <java.version>21</java.version>
         <structured-logging.version>3.0.3</structured-logging.version>
-        <org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
         <gson.version>2.10.1</gson.version>
         <guava.version>33.1.0-jre</guava.version>
         <commons.lang3.version>3.14.0</commons.lang3.version>
@@ -26,7 +26,7 @@
         <johnzon.version>2.0.0</johnzon.version>
         <jakarta.json.version>1.1.5</jakarta.json.version>
         <jackson.version>2.17.0</jackson.version>
-        <hamcrest-all-version>1.3</hamcrest-all-version>
+        <hamcrest-version>2.2</hamcrest-version>
         <api-security-java.version>2.0.3</api-security-java.version>
         <api-helper-java.version>3.0.1</api-helper-java.version>
         <api-sdk-java.version>6.0.9</api-sdk-java.version>
@@ -175,8 +175,8 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>${hamcrest-all-version}</version>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
