Replacing custom healthcheck endpoints with Spring's Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-uk.gov.companieshouse.certifiedcopies.orders.api.health=/healthcheck
 uk.gov.companieshouse.certifiedcopies.orders.api.home=/orderable/certified-copies
 
 spring.data.mongodb.uri: ${MONGODB_URL}
 spring.data.mongodb.field-naming-strategy: uk.gov.companieshouse.certifiedcopies.orders.api.model.NoIsSnakeCaseFieldNamingStrategy
 server.error.include-message=always
+
+management.endpoints.enabled-by-default=false
+management.endpoints.web.base-path=/
+management.endpoints.web.path-mapping.health=/orderable/certified-copies/healthcheck
+management.endpoint.health.show-details=never
+management.endpoint.health.enabled=true
