upgrading spring boot to 3.2.4

--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
         <environment-reader-library.version>3.0.1</environment-reader-library.version>
         <test-containers.version>1.19.7</test-containers.version>
 
-        <spring-boot-maven-plugin.version>3.2.3</spring-boot-maven-plugin.version>
-        <spring-boot-dependencies.version>3.2.3</spring-boot-dependencies.version>
+        <spring-boot-maven-plugin.version>3.2.4</spring-boot-maven-plugin.version>
+        <spring-boot-dependencies.version>3.2.4</spring-boot-dependencies.version>
 
         <!-- Docker -->
         <jib-maven-plugin.version>3.4.1</jib-maven-plugin.version>
@@ -75,6 +75,12 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <!--Overriding spring-web version to remove vulnerability-->
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.1.6</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
