adding otel instrumentation to service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 uk.gov.companieshouse.certifiedcopies.orders.api.home=/orderable/certified-copies
 
+spring.application.name=certified-copies.orders.api.ch.gov.uk
+
 spring.data.mongodb.uri: ${MONGODB_URL}
 spring.data.mongodb.field-naming-strategy: uk.gov.companieshouse.certifiedcopies.orders.api.model.NoIsSnakeCaseFieldNamingStrategy
 server.error.include-message=always
