--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>21</java.version>
-        <structured-logging.version>3.0.9</structured-logging.version>
+        <structured-logging.version>3.0.32</structured-logging.version>
         <org.mapstruct.version>1.6.0</org.mapstruct.version>
         <gson.version>2.11.0</gson.version>
         <guava.version>33.2.1-jre</guava.version>
@@ -42,6 +42,7 @@
         <maven-surefire-plugin.version>3.3.1</maven-surefire-plugin.version>
         <environment-reader-library.version>3.0.1</environment-reader-library.version>
         <test-containers.version>1.20.1</test-containers.version>
+        <opentelemetry-instrumentation-bom.version>2.14.0</opentelemetry-instrumentation-bom.version>
 
         <spring-boot-maven-plugin.version>3.3.2</spring-boot-maven-plugin.version>
         <spring-boot-dependencies.version>3.3.2</spring-boot-dependencies.version>
@@ -76,6 +77,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom</artifactId>
+                <version>${opentelemetry-instrumentation-bom.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
@@ -113,6 +121,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.johnzon</groupId>
