Fee update for 2025

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.data.mongodb.uri: ${MONGODB_URL}
 spring.data.mongodb.field-naming-strategy: uk.gov.companieshouse.certifiedcopies.orders.api.model.NoIsSnakeCaseFieldNamingStrategy
 server.error.include-message=always
 
+spring.config.import=classpath:costs.properties
+
 management.endpoints.enabled-by-default=false
 management.endpoints.web.base-path=/
 management.endpoints.web.path-mapping.health=/certified-copies/healthcheck
