--- a/src/main/resources/costs.properties
+++ b/src/main/resources/costs.properties
@@ -1,6 +1,6 @@
-costs.standard_cost: 15
-costs.standard_new_incorporation_cost: 30
-costs.same_day_cost: 50
-costs.same_day_new_incorporation_cost: 100
+costs.standard_cost: ${STANDARD_FEE}
+costs.standard_new_incorporation_cost: $(STANDARD_INCORP_FEE)
+costs.same_day_cost: ${EXPRESS_FEE}
+costs.same_day_new_incorporation_cost: $(EXPRESS_INCORP_FEE)
 costs.digital_cost: 9
 costs.digital_new_incorporation_cost: 9
