fixing broken tests

--- a/src/test/resources/costs.properties
+++ b/src/test/resources/costs.properties
@@ -1,6 +1,6 @@
-costs.standard_cost: 22
-costs.standard_new_incorporation_cost: 44
-costs.same_day_cost: 65
-costs.same_day_new_incorporation_cost: 130
-costs.digital_cost: 9
-costs.digital_new_incorporation_cost: 9
+costs.standard_cost=22
+costs.standard_new_incorporation_cost=44
+costs.same_day_cost=65
+costs.same_day_new_incorporation_cost=130
+costs.digital_cost=9
+costs.digital_new_incorporation_cost=9
